# claude-memory-mcp

./: .gitignore  .gitleaksignore  .woodpecker.yml  CONTEXT.md  LICENSE  README.md  manifest  pyproject.toml
.beads/: metadata.json
.claude/: CLAUDE.md
.claude-plugin/: plugin.json
.github/workflows/: build.yml  ci.yml  pgvector-image.yml  release.yml
.woodpecker/: build-fallback.yml  build.yml  deploy.yml
benchmarks/: .gitignore  POST_CLEANUP_GATE.md  README.md
benchmarks/harness/: __init__.py  baselines.py  dataset.py  example_retriever.py  matrix.py  metrics.py  runner.py  significance.py  test_harness.py  test_matrix.py  test_matrix_runner.py  test_significance.py  types.py
benchmarks/retrievers/: __init__.py  fts.py  graph_build.py  graph_extract.py  hybrid.py  test_graph_build.py  test_graph_extract.py  test_hybrid.py
benchmarks/scripts/: dataset_stats.py  export_corpus.py  regression_run.py  run_eval.py  snapshot_corpus.py
commands/: recall.md  remember.md
deploy/helm/claude-memory/: Chart.yaml  values.yaml
deploy/helm/claude-memory/templates/: deployment.yaml  ingress.yaml
deploy/infra/: Dockerfile.pgvector  dbaas-pg-cluster-pgvector.tf
deploy/kubernetes/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
docker/: Dockerfile  docker-compose.yml
docs/adr/: 0001-pursue-hybrid-retrieval-embeddings-and-concept-graph.md  0002-api-postgres-first-sqlite-stays-lexical.md  0003-external-embedding-apis-allowed-for-non-sensitive-memories.md  0004-phase-the-hybrid-lexical-dense-first-graph-gated.md  0005-rrf-default-cc-challenger.md  0006-pgvector-hnsw-halfvec-1024d-embeddings.md  0007-bounded-self-contained-memories-with-typed-links.md
docs/research/: benchmark-report.md  gbrain-vs-claude-memory-comparison.md  hybrid-build-report.md  integration-design.md  survey.md
docs/runbooks/: hybrid-recall-promotion.md  promote-pgvector-dense-recall.md
examples/: mcp-config-local.json  mcp-config-server.json  mcp-config-vault.json
hooks/: auto-allow-memory-tools.py  auto-learn.py  user-prompt-recall.py
mcp/: memory-mcp.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_multi_user_and_secrets.py  003_add_soft_delete_and_sync.py  004_add_sharing.py  005_add_embeddings_and_graph.py  006_add_memory_links.py
openclaw-plugin/: index.mjs  openclaw.plugin.json  package.json
scripts/: extract-knowledge.py  store_cleanup.py
skills/memory-management/: SKILL.md
src/claude_memory/: __init__.py  __main__.py  credential_detector.py  crypto.py  embeddings.py  local_store.py  mcp_server.py  sync.py  vault_client.py
src/claude_memory/api/: app.py  auth.py  database.py  metrics.py  models.py  permissions.py  recall.py  vault_service.py
src/claude_memory/ui/static/: index.html
src/claude_memory/ui/static/css/: app.css
src/claude_memory/ui/static/js/: api.js  app.js  dashboard.js  graph.js  memories.js  search.js  tags.js
tests/: test_api.py  test_auth.py  test_credential_detector.py  test_crypto.py  test_embeddings.py  test_links.py  test_mcp_server.py  test_migration_005.py  test_migration_006.py  test_promotion_artifacts.py  test_properties.py  test_regression_tooling.py  test_store_cleanup.py  test_sync.py  test_vault_client.py
